Update the navigation link for bulk URLs and adjust imports in views.py to include JsonResponse and process_url_item.

--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,7 @@
             <li><a href="/v2/">V2</a></li>
             <li><a href="/compare/">Compare</a></li>
             <li><a href="/ingest/upload/">Upload</a></li>
-            <li><a href="/ingest/urls/">Bulk URLs</a></li>
+            <li><a href="/upload/urls/">Bulk URLs</a></li>
             <li><a href="/admin/">Admin</a></li>
         </ul>
     </nav>
